[package]
name = "rustsys"
version = "0.1.0"
authors = ["vic <chen116@usc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3.1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
tokio-util = { version = "0.5.0", features = ["full"] }
bytes = "0.6"
futures = "0.3.0"
http = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
httparse = "1.0"
time = "0.1"
structopt = "0.3.14"
dns-lookup = "1.0.5"
get_local_ip = "0.2.1"
pnet = "0.26.0"
[[bin]]
name = "server"
path = "src/bin/server.rs"


[[bin]]
name = "main"
path = "src/bin/main.rs"
